--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,13 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
+build/
+node_modules/
+Debug/
+Release/
+*.lock
+*.log
 *.out
-*.app
+package-lock.json
+
+.idea/
+.vscode/
+.theia/
+.DS_Store
