feat: add more setup

--- a/boost_test/CMakeLists.txt
+++ b/boost_test/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 23)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
+find_package(Boost REQUIRED COMPONENTS stacktrace_basic)
+
 add_executable(boost_test main.cpp)
 target_link_libraries(boost_test ${CONAN_LIBS})
 
