--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,8 @@
-# image:
-#   file: .gitpod.Dockerfile
+image:
+   file: .gitpod.Dockerfile
 
 tasks:
   - init: pnpm i
   - init: sudo apt update && sudo apt install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabi qemu qemu-user -y
+  - init: cd boost_test && mkdir build && cd build && conan install .. --build missing && cmake ..
+
